[gd_scene load_steps=17 format=2]

[ext_resource path="res://World.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI.gd" type="Script" id=2]
[ext_resource path="res://fonts/font_title.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/font_button.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/popups/PopupPlayerDetails.gd" type="Script" id=5]
[ext_resource path="res://themes/theme_default.tres" type="Theme" id=6]
[ext_resource path="res://fonts/font_era_name.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/focus types/science.png" type="Texture" id=8]
[ext_resource path="res://assets/focus types/economy.png" type="Texture" id=9]
[ext_resource path="res://assets/leaders/flags/Nubia.png" type="Texture" id=10]
[ext_resource path="res://assets/leaders/portraits/Amanitore.png" type="Texture" id=11]
[ext_resource path="res://assets/focus types/growth.png" type="Texture" id=12]
[ext_resource path="res://assets/focus types/culture.png" type="Texture" id=13]
[ext_resource path="res://assets/focus types/industry.png" type="Texture" id=14]
[ext_resource path="res://assets/focus types/military.png" type="Texture" id=15]

[sub_resource type="ButtonGroup" id=1]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 0.894118, 0.784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldViewport" type="Viewport" parent="WorldContainer"]
size = Vector2( 3068, 1340 )
handle_input_locally = false
render_target_update_mode = 3
physics_object_picking = true

[node name="World" parent="WorldContainer/WorldViewport" instance=ExtResource( 1 )]

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupPlayerCount" type="WindowDialog" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 200.0
margin_right = -200.0
margin_bottom = -200.0
popup_exclusive = true

[node name="Label" type="Label" parent="UI/PopupPlayerCount"]
anchor_right = 1.0
anchor_bottom = 0.2
custom_fonts/font = ExtResource( 3 )
text = "How Many Players?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxButtons" type="HBoxContainer" parent="UI/PopupPlayerCount"]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="UI/PopupPlayerCount/HBoxButtons"]
margin_right = 664.0
margin_bottom = 732.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
group = SubResource( 1 )
text = "2"

[node name="Button3" type="Button" parent="UI/PopupPlayerCount/HBoxButtons"]
margin_left = 668.0
margin_right = 1332.0
margin_bottom = 732.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
group = SubResource( 1 )
text = "3"

[node name="Button4" type="Button" parent="UI/PopupPlayerCount/HBoxButtons"]
margin_left = 1336.0
margin_right = 2000.0
margin_bottom = 732.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
group = SubResource( 1 )
text = "4"

[node name="Button5" type="Button" parent="UI/PopupPlayerCount/HBoxButtons"]
margin_left = 2004.0
margin_right = 2668.0
margin_bottom = 732.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
group = SubResource( 1 )
text = "5"

[node name="PopupPlayerDetails" type="WindowDialog" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 200.0
margin_right = -200.0
margin_bottom = -200.0
popup_exclusive = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
NameField = NodePath("GridOptions/Field")
ColorOption = NodePath("GridOptions/OptionColor")
CivOption = NodePath("GridOptions/OptionCiv")
LabelCiv = NodePath("GridDetails/LabelCiv")
LabelLeader = NodePath("GridDetails/LabelLeader")
TextureCiv = NodePath("GridDetails/TextureCiv")
TextureLeader = NodePath("GridDetails/TextureLeader")
LabelAbilityName = NodePath("VBoxAbility/LabelName")
LabelAbilityText = NodePath("VBoxAbility/LabelText")
HBoxFocus = NodePath("HBoxFocus")

[node name="HBoxName" type="Label" parent="UI/PopupPlayerDetails"]
anchor_right = 0.5
anchor_bottom = 0.2
margin_left = 50.0
margin_top = 50.0
custom_fonts/font = ExtResource( 4 )
text = "Enter Player Details"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridOptions" type="GridContainer" parent="UI/PopupPlayerDetails"]
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.9
margin_left = 50.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/PopupPlayerDetails/GridOptions"]
margin_top = 5.0
margin_right = 246.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 4 )
text = "Name:"
align = 2
valign = 1

[node name="Field" type="LineEdit" parent="UI/PopupPlayerDetails/GridOptions"]
margin_left = 250.0
margin_right = 1334.0
margin_bottom = 82.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )

[node name="LabelColor" type="Label" parent="UI/PopupPlayerDetails/GridOptions"]
margin_top = 86.0
margin_right = 246.0
margin_bottom = 164.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
text = "Color:"
align = 2
valign = 1

[node name="OptionColor" type="OptionButton" parent="UI/PopupPlayerDetails/GridOptions"]
margin_left = 250.0
margin_top = 86.0
margin_right = 1334.0
margin_bottom = 164.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "None"

[node name="LabelCiv" type="Label" parent="UI/PopupPlayerDetails/GridOptions"]
margin_top = 168.0
margin_right = 246.0
margin_bottom = 246.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
text = "Civ:"
align = 2
valign = 1

[node name="OptionCiv" type="OptionButton" parent="UI/PopupPlayerDetails/GridOptions"]
margin_left = 250.0
margin_top = 168.0
margin_right = 1334.0
margin_bottom = 246.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "None"

[node name="GridDetails" type="GridContainer" parent="UI/PopupPlayerDetails"]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 0.4
margin_top = 50.0
margin_right = -50.0
margin_bottom = -10.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelCiv" type="Label" parent="UI/PopupPlayerDetails/GridDetails"]
margin_right = 665.0
margin_bottom = 72.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "civ_name"
align = 1
valign = 1

[node name="LabelLeader" type="Label" parent="UI/PopupPlayerDetails/GridDetails"]
margin_left = 669.0
margin_right = 1334.0
margin_bottom = 72.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "leader_name"
align = 1
valign = 1

[node name="TextureCiv" type="TextureRect" parent="UI/PopupPlayerDetails/GridDetails"]
margin_top = 76.0
margin_right = 665.0
margin_bottom = 356.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 10 )
stretch_mode = 6

[node name="TextureLeader" type="TextureRect" parent="UI/PopupPlayerDetails/GridDetails"]
margin_left = 669.0
margin_top = 76.0
margin_right = 1334.0
margin_bottom = 356.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 11 )
stretch_mode = 6

[node name="VBoxAbility" type="VBoxContainer" parent="UI/PopupPlayerDetails"]
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 0.8
margin_left = 200.0
margin_top = 25.0
margin_right = -200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelName" type="Label" parent="UI/PopupPlayerDetails/VBoxAbility"]
margin_right = 984.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
text = "ability_name"
align = 1
valign = 2

[node name="LabelText" type="Label" parent="UI/PopupPlayerDetails/VBoxAbility"]
margin_top = 76.0
margin_right = 984.0
margin_bottom = 391.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "ability_name"
align = 1
autowrap = true

[node name="HBoxFocus" type="HBoxContainer" parent="UI/PopupPlayerDetails"]
anchor_left = 0.5
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -50.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture1a" type="TextureRect" parent="UI/PopupPlayerDetails/HBoxFocus"]
margin_right = 219.0
margin_bottom = 158.0
size_flags_horizontal = 3
texture = ExtResource( 13 )
expand = true
stretch_mode = 6

[node name="Texture1b" type="TextureRect" parent="UI/PopupPlayerDetails/HBoxFocus"]
margin_left = 223.0
margin_right = 442.0
margin_bottom = 158.0
size_flags_horizontal = 3
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="Texture2" type="TextureRect" parent="UI/PopupPlayerDetails/HBoxFocus"]
margin_left = 446.0
margin_right = 665.0
margin_bottom = 158.0
size_flags_horizontal = 3
texture = ExtResource( 12 )
expand = true
stretch_mode = 6

[node name="Texture3" type="TextureRect" parent="UI/PopupPlayerDetails/HBoxFocus"]
margin_left = 669.0
margin_right = 888.0
margin_bottom = 158.0
size_flags_horizontal = 3
texture = ExtResource( 14 )
expand = true
stretch_mode = 6

[node name="Texture4" type="TextureRect" parent="UI/PopupPlayerDetails/HBoxFocus"]
margin_left = 892.0
margin_right = 1111.0
margin_bottom = 158.0
size_flags_horizontal = 3
texture = ExtResource( 15 )
expand = true
stretch_mode = 6

[node name="Texture5" type="TextureRect" parent="UI/PopupPlayerDetails/HBoxFocus"]
margin_left = 1115.0
margin_right = 1334.0
margin_bottom = 158.0
size_flags_horizontal = 3
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="ButtonConfirm" type="Button" parent="UI/PopupPlayerDetails"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -90.0
margin_right = 350.0
custom_fonts/font = ExtResource( 4 )
text = "Confirm"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="UI/PopupPlayerCount/HBoxButtons/Button2" to="UI" method="_on_PlayerCount_pressed" binds= [ 2 ]]
[connection signal="pressed" from="UI/PopupPlayerCount/HBoxButtons/Button3" to="UI" method="_on_PlayerCount_pressed" binds= [ 3 ]]
[connection signal="pressed" from="UI/PopupPlayerCount/HBoxButtons/Button4" to="UI" method="_on_PlayerCount_pressed" binds= [ 4 ]]
[connection signal="pressed" from="UI/PopupPlayerCount/HBoxButtons/Button5" to="UI" method="_on_PlayerCount_pressed" binds= [ 5 ]]
[connection signal="text_changed" from="UI/PopupPlayerDetails/GridOptions/Field" to="UI/PopupPlayerDetails" method="_on_Field_text_changed"]
[connection signal="item_selected" from="UI/PopupPlayerDetails/GridOptions/OptionColor" to="UI/PopupPlayerDetails" method="_on_Color_item_selected"]
[connection signal="item_selected" from="UI/PopupPlayerDetails/GridOptions/OptionCiv" to="UI/PopupPlayerDetails" method="_on_Civ_item_selected"]
[connection signal="pressed" from="UI/PopupPlayerDetails/ButtonConfirm" to="UI/PopupPlayerDetails" method="_on_Confirm_pressed"]
